fixed font not showing up

--- a/client/src/app.scss
+++ b/client/src/app.scss
@@ -3,6 +3,10 @@
     src: url('../../fonts/Poppins-Regular.ttf');
 }
 
+* {
+    font-family: 'Poppins' ;
+}
+
 body {
     font-family: 'Poppins';
 }
